[squash] pom optimisations